--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,8 @@ html, body {
 }
 
 body {
-    max-width: 100vw;
-    max-height: 100dvh;
+    max-width: 100%;
+    max-height: 100%;
     overflow-x: auto;
 }
 
