--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,7 @@ select, input[type="text"] {
 }
 
 .role-card-footer, .card-footer {
-    display: flex;
+    display: absolute;
     justify-content: center;
     margin-top: 10px;
 }
